# nba-stats-streamlit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: data-src.md  docker.md  docker_edit.md  model.md  pytest.md  setup.md  streamlit.md
frontend/: .fetch_demo.ipynb.swp  fetch.py  fetch_career.py  fetch_demo.ipynb  fetch_league.py  streamlit_demo.py  transform.py
frontend/app/: .dockerignore  build.sh  pyproject.toml  run_app.sh  streamlit.Dockerfile  streamlit_nba.py
frontend/fetch/: .dockerignore  app.py  build.sh  fetch.Dockerfile  fetch.py  fetch_league.py  pyproject.toml  run_fetch.sh
frontend/mlflow/: build.sh  mlflow.Dockerfile  run_mlflow.sh  server.sh
frontend/model/: .dockerignore  __init__.py  app_model.py  build.sh  docker_model.sh  foo.py  leaguedash_columns.py  local_mlflow.sh  model.Dockerfile  model.py  pyproject.toml  run_model.sh  train.py  transform.py
notebooks/: altair_demo.ipynb  data_fetch.ipynb  fetch_demo.ipynb  leaguedash.ipynb  model.ipynb  model_league.ipynb
tests/: conftest.py  test_fetch.py  test_fetch_career.py  test_fetch_league.py  test_transform.py
tests/data/: leaguedash_merge_test.pkl  leaguedash_playoffs_2018-19.pkl  leaguedash_regular_2018-19.pkl  test_merge_df.pkl  test_playoffs_df.pkl  test_playoffs_feat.pkl  test_regular_df.pkl  test_regular_feat.pkl  test_rerank_df.pkl
tests/integration/: conftest.py  test_flask.py
tests/unit/: conftest.py  test_fetch.py  test_fetch_career.py  test_model.py
