[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["vykuang <vykuang92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
