[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["vykuang <vykuang92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.8"
scikit-learn = "~1.1.0"
mlflow = "~1.28.0"
Flask = "^2.2.2"
streamlit = "^1.12.2"
nba-api = "^1.1.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
